--- a/bmi.html
+++ b/bmi.html
@@ -22,50 +22,62 @@
   <body>
     <main>
       <div class="wrapper">
-        <h1 id="title-heading">Age Calculator</h1>
-        <form class="current_date_form">
-          <h3 class="center">Calculate to Current Date</h3>
-          <label for="date">Select Your Date of Birth:</label>
-          <input type="date" class="date-input" id="date" name="date" />
+        <h1 id="title-heading">BMI Calculator</h1>
+        <form class="bmi-form">
+          <h3>Calculate your Body Mass Index</h3>
+          <p>
+            BMI is a reliable indicator of body fatness for most people. It is
+            used to screen for weight categories that may lead to health
+            problems. This calculator provides BMI and the corresponding weight
+            category
+          </p>
+          <input
+            type="number"
+            class="date-input"
+            id="weight"
+            name="weight"
+            placeholder="Enter your weight in Kgs" />
+          <br />
+          <input
+            type="number"
+            class="date-input"
+            id="height"
+            name="height"
+            placeholder="Enter your height in Cm" />
           <br />
           <label class="results-hidden" id="results"></label>
           <br />
           <button type="submit" class="btn">Calculate</button>
         </form>
-        <form class="given_date_form">
-          <h3 class="center">Calculate to Given Date</h3>
-          <div class="input-wrapper">
-            <label for="birth-date">Your Birth Date (from):</label>
-            <input
-              type="date"
-              class="date-input"
-              id="birth-date"
-              name="birth-date" />
+        <div class="flex-container">
+          <div>
+            <h4>UnderWeight</h4>
+            <p>Less than 18.5</p>
           </div>
-
-          <div class="input-wrapper" style="margin-top: 5px">
-            <label for="selected-date">To Date:</label>
-            <input
-              type="date"
-              class="date-input"
-              id="selected-date"
-              name="selected-date" />
+          <div>
+            <h4>Normal</h4>
+            <p>18.5 - 24.9</p>
           </div>
-
-          <label class="results-hidden" id="results-2"></label>
-          <br />
-          <button type="submit" class="btn1">Calculate</button>
-        </form>
+          <div>
+            <h4>Overweight</h4>
+            <p>25 - 29.9</p>
+          </div>
+          <div>
+            <h4>Obese</h4>
+            <p>30 and above</p>
+          </div>
+        </div>
+      </div>
+      <div class="others">
+        <h3>Other Calculators</h3>
+        <div class="flex-wrapper">
+          <a href="/index.html" class="links" id="Age">Age</a>
+          <a href="" class="links" id="tax">PAYE</a>
+          <a href="" class="links" id="mortgage">Mortgage</a>
+        </div>
       </div>
     </main>
-    <div class="others">
-      <h3>Other Calculators</h3>
-      <div class="flex-wrapper">
-        <a href="/bmi.html" class="links" id="bmi">BMI</a>
-        <a href="" class="links" id="tax">PAYE</a>
-        <a href="" class="links" id="mortgage">Mortgage</a>
-      </div>
-    </div>
+
     <script src="script.js" defer></script>
   </body>
 </html>
