--- a/bmi.html
+++ b/bmi.html
@@ -29,18 +29,18 @@
             BMI is a reliable indicator of body fatness for most people. It is
             used to screen for weight categories that may lead to health
             problems. This calculator provides BMI and the corresponding weight
-            category
+            category.
           </p>
           <input
             type="number"
-            class="date-input"
+            class="bmi-input"
             id="weight"
             name="weight"
             placeholder="Enter your weight in Kgs" />
           <br />
           <input
             type="number"
-            class="date-input"
+            class="bmi-input"
             id="height"
             name="height"
             placeholder="Enter your height in Cm" />
