--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         </div>
       </div>
     </main>
-
+    <footer style="text-align: center">
+      &copy; 2024 Donvine. All Rights Reserved
+    </footer>
     <script src="script.js" defer></script>
   </body>
 </html>
