--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
         </form>
         <form class="given_date_form">
           <h3 class="center">Calculate to Given Date</h3>
-          <div class="input-wrapper">
-            <label for="birth-date">Your Birth Date (from):</label>
-            <input
-              type="date"
-              class="date-input"
-              id="birth-date"
-              name="birth-date" />
-          </div>
 
-          <div class="input-wrapper" style="margin-top: 5px">
-            <label for="selected-date">To Date:</label>
-            <input
-              type="date"
-              class="date-input"
-              id="selected-date"
-              name="selected-date" />
-          </div>
+          <label for="birth-date">Your Birth Date (from):</label>
+          <br />
+          <input
+            type="date"
+            class="date-input"
+            id="birth-date"
+            name="birth-date" />
+          <br />
 
+          <label for="selected-date">Select A Specific Date (To):</label>
+          <br />
+          <input
+            type="date"
+            class="date-input"
+            id="selected-date"
+            name="selected-date" />
+          <br />
           <label class="results-hidden" id="results-2"></label>
           <br />
           <button type="submit" class="btn1">Calculate</button>
